# whatsapp-message-summarizer-public

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml  users.example.yaml
app/: attachments.py  config.py  gemini.py  gowa_client.py  lock.py  logging_setup.py  mailer.py  models.py  names.py  notifier.py  scanner.py  selftest.py  store.py  summarizer.py  worker.py
config/: users.yaml.example
docs/superpowers/plans/: 2026-06-24-whatsapp-summarizer.md  2026-06-28-coolify-compose.md  2026-06-29-email-media-attachments.md
docs/superpowers/specs/: 2026-06-24-whatsapp-summarizer-design.md  2026-06-28-coolify-compose-design.md  2026-06-29-email-media-attachments-design.md
tests/: test_attachments.py  test_config.py  test_gemini.py  test_gowa_client.py  test_lock.py  test_logging_setup.py  test_mailer.py  test_models.py  test_names.py  test_notifier.py  test_scanner.py  test_selftest.py  test_smoke.py  test_store.py  test_summarizer.py  test_worker.py
