[project]
name = "whatsapp-summarizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "google-genai>=0.3",
    "PyYAML>=6.0",
    "resend>=2.0",
    "Markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "freezegun>=1.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
